# Privately

./: Cargo.toml  README.md
.cargo/: config.toml
dev/: quick_test.sh  server.sh
examples/: quick_test.rs
sql/dev/: 00__recreate_db.sql  01__create_schema.sql  02__seed.sql
src/: _dev_utils.rs  config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs  web.rs
src/_dev_utils/: dev_db.rs
src/web/: auth.rs  hello_router.rs  login_router.rs  static_router.rs  tickets_router.rs
src/websockets/: main.rs
